# hamlet

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  start_server.sh  start_worker.sh
.github/: dependabot.yml
.github/workflows/: build_branch.yml  codeql-analysis.yml  deploy_production.yml  deploy_staging.yml
exports/: apps.py  forms.py  models.py
exports/migrations/: 0001_initial.py  0002_subjectsetexport_csv.py  0003_workflowexport.py  0004_auto_20190627_1113.py  0005_mlsubjectassistantexport.py  0006_auto_20191011_1657.py  0007_auto_20191101_1815.py  0008_auto_20200727_1437.py  0009_kadesubjectassistantexport.py
hamlet/: celery.py  kade_ml_exports.py  kade_service.py  ms_ml_exports.py  settings.py  urls.py  views.py  wsgi.py  zooniverse_auth.py
kubernetes/: deployment-production.tmpl  deployment-staging.tmpl  deployment.tmpl
static/: main.css
templates/: base.html  index.html  ml-subject-assistant.html  project.html  subject-assistant.html  zoobot-subject-assistant.html
templates/registration/: login.html
