[tool.poetry]
name = "hamlet"
version = "0.1.0"
description = "Format data exports for external systems"
authors = ["Zooniverse Team <contact@zooniverse.org>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2.24"
celery = "*"
oauthlib = "*"
panoptes-client = ">=1.1.1"
psycopg2-binary = "~2.8.6"
pytest = "*"
redis = "*"
gunicorn = "*"
social-auth-app-django = "*"
requests = "*"
django-storages = "*"
boto3 = "*"
flower = "*"
azure = "<5"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-pspec = "*"
pytest-django = "*"
pytest-mock = "*"
pytest-pythonpath = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
